# NoahGameFrame

./: CMakeLists.txt
NFComm/: CMakeLists.txt
NFComm/NFLuaScriptPlugin/: CMakeLists.txt  NFCLuaScriptModule.cpp  NFCLuaScriptModule.h  NFLuaScriptPlugin.cpp
NFComm/NFPluginModule/: NFIScriptModule.h
_Out/Debug/: Plugin.xml  PluginX.xml
_Out/NFDataCfg/ScriptModule/: TestModule.lua
